tests/paczka1/small_fuzzy/39059719.err
Error in line 2: xwRVO S37 43,1
Error in line 5: xwRVO A478 70,0
Error in line 9: ntkzLfoxz S73 0,4
